--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "cors": "2.8.5",
-    "dotenv": "16.0.3",
+    "dotenv": "^16.0.3",
     "express": "4.18.2",
     "morgan": "1.10.0",
     "mysql2": "3.2.0",
