--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,4 +80,4 @@ stages:
               appName: $(webAppName)
               runtimeStack: 'NODE|10.10'
               package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
-              startUpCommand: 'npm run dev'
+              startUpCommand: 'npm run start'
