--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "standard": "17.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "2.8.5",
     "dotenv": "^16.0.3",
     "express": "4.18.2",
