--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
     "nodemon": "2.0.22",
-    "standard": "17.0.0"
+    "standard": "17.0.0",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "cors": "2.8.5",
@@ -23,5 +28,14 @@
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
+  },
+  "jest": {
+    "testMatch": [
+      "<rootDir>/__test__/**/*.test.js",
+      "**/?(*.)+(spec|test).js?(x)"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   }
 }
