--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "nodemon": "2.0.22",
+    "sinon": "^15.0.3",
     "standard": "17.0.0",
     "supertest": "^6.3.3"
   },
@@ -31,7 +32,7 @@
   },
   "jest": {
     "testMatch": [
-      "<rootDir>/__test__/**/*.test.js",
+      "<rootDir>/tests/**/*.test.js",
       "**/?(*.)+(spec|test).js?(x)"
     ],
     "transform": {
