--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "4.18.2",
     "morgan": "1.10.0",
     "mysql2": "3.2.0",
-    "sequelize": "^6.30.0"
+    "sequelize": "^6.30.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
