--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand --detectOpenHandles --forceExit --testTimeout=10000",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "2.0.22",
-    "standard": "17.0.0"
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "sinon": "^15.0.3",
+    "sinon-chai": "^3.7.0",
+    "standard": "^17.0.0",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "cors": "2.8.5",
@@ -23,5 +31,10 @@
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   }
 }
