--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
         npm install
         npm run build --if-present
         # npm run test --if-present
-        npm run coverage
+        # npm run coverage
       displayName: 'npm install, build and test'
 
     - task: ArchiveFiles@2
