--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "2.8.5",
     "dotenv": "^16.0.3",
     "express": "4.18.2",
+    "joi": "^17.9.2",
     "morgan": "1.10.0",
     "mysql2": "3.2.0",
     "sequelize": "^6.30.0",
